<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>app_interface_pkg</name>
  <version>0.0.0</version>
  <description>BLE peripheral node using gatt-python</description>
  <maintainer email="32204045@dankook.ac.kr">dongjae</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>bluezero</exec_depend>
  <exec_depend>dbus-next</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
